scrollbar fix.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -112,7 +112,7 @@ $company-scenario-item-selected-background: $scenario-selected-background;
 
 // Fill max height.
 @mixin fill {
-  height: calc(100vh - 116px);
+  height: calc(100vh - 124px);
 }
 
 // Truncate a line of text with elli...
